syntax = "proto3";

option go_package = ".;proto";

package proto;

service Attachments {
    rpc GetAttachment(AttachmentLookupRequest) returns (Attachment) {}
}

message Attachment {
    uint64 id = 1;
    string uuid = 2;
    int64 size = 3;
    string name = 4;
    string alt = 5;
    string usage = 6;
    string mimetype = 7;
    string hash = 8;
    string destination = 9;
    bytes metadata = 10;
    bool is_mature = 11;
    uint64 account_id = 12;
}

message AttachmentLookupRequest {
    optional uint64 id = 1;
    optional string uuid = 2;
}
